[gd_scene load_steps=51 format=2]

[ext_resource path="res://Character/Idle/Hobbit - Idle1.png" type="Texture" id=1]
[ext_resource path="res://Character/Idle/Hobbit - Idle3.png" type="Texture" id=2]
[ext_resource path="res://Character/Idle/Hobbit - Idle2.png" type="Texture" id=3]
[ext_resource path="res://Character/Idle/Hobbit - Idle4.png" type="Texture" id=4]
[ext_resource path="res://Character/Fredegar.gd" type="Script" id=5]
[ext_resource path="res://Character/Run/Hobbit - run5.png" type="Texture" id=6]
[ext_resource path="res://Character/Run/Hobbit - run6.png" type="Texture" id=7]
[ext_resource path="res://Character/Run/Hobbit - run7.png" type="Texture" id=8]
[ext_resource path="res://Character/Run/Hobbit - run8.png" type="Texture" id=9]
[ext_resource path="res://Character/Run/Hobbit - run9.png" type="Texture" id=10]
[ext_resource path="res://Character/Run/Hobbit - run1.png" type="Texture" id=11]
[ext_resource path="res://Character/Run/Hobbit - run2.png" type="Texture" id=12]
[ext_resource path="res://Character/Run/Hobbit - run3.png" type="Texture" id=13]
[ext_resource path="res://Character/Run/Hobbit - run10.png" type="Texture" id=14]
[ext_resource path="res://Character/Run/Hobbit - run4.png" type="Texture" id=15]
[ext_resource path="res://Character/Jump/Hobbit - jumpt8.png" type="Texture" id=16]
[ext_resource path="res://Character/Jump/Hobbit - jumpt9.png" type="Texture" id=17]
[ext_resource path="res://Character/Jump/Hobbit - jumpt10.png" type="Texture" id=18]
[ext_resource path="res://Character/Jump/Hobbit - jumpt5.png" type="Texture" id=19]
[ext_resource path="res://Character/Jump/Hobbit - jumpt4.png" type="Texture" id=20]
[ext_resource path="res://Character/Jump/Hobbit - jumpt6.png" type="Texture" id=21]
[ext_resource path="res://Character/Jump/Hobbit - jumpt7.png" type="Texture" id=22]
[ext_resource path="res://Character/Jump/Hobbit - jumpt2.png" type="Texture" id=23]
[ext_resource path="res://Character/Jump/Hobbit - jumpt1.png" type="Texture" id=24]
[ext_resource path="res://Character/Jump/Hobbit - jumpt3.png" type="Texture" id=25]
[ext_resource path="res://VFX/Dust.tscn" type="PackedScene" id=26]
[ext_resource path="res://Character/DefaultPlayerMovement.tres" type="Resource" id=27]
[ext_resource path="res://Character/Climbing/Hobbit - Climbing3.png" type="Texture" id=28]
[ext_resource path="res://Character/Climbing/Hobbit - Climbing4.png" type="Texture" id=29]
[ext_resource path="res://Character/Climbing/Hobbit - Climbing1.png" type="Texture" id=30]
[ext_resource path="res://Character/Climbing/Hobbit - Climbing2.png" type="Texture" id=31]
[ext_resource path="res://Character/Attack/Hobbit - attack5.png" type="Texture" id=32]
[ext_resource path="res://Character/Attack/Hobbit - attack10.png" type="Texture" id=33]
[ext_resource path="res://Character/Attack/Hobbit - attack9.png" type="Texture" id=34]
[ext_resource path="res://Character/Attack/Hobbit - attack1.png" type="Texture" id=35]
[ext_resource path="res://Character/Attack/Hobbit - attack15.png" type="Texture" id=36]
[ext_resource path="res://Character/Attack/Hobbit - attack13.png" type="Texture" id=37]
[ext_resource path="res://Character/Attack/Hobbit - attack2.png" type="Texture" id=38]
[ext_resource path="res://Character/Attack/Hobbit - attack17.png" type="Texture" id=39]
[ext_resource path="res://Character/Attack/Hobbit - attack3.png" type="Texture" id=40]
[ext_resource path="res://Character/Attack/Hobbit - attack8.png" type="Texture" id=41]
[ext_resource path="res://Character/Attack/Hobbit - attack6.png" type="Texture" id=42]
[ext_resource path="res://Character/Attack/Hobbit - attack4.png" type="Texture" id=43]
[ext_resource path="res://Character/Attack/Hobbit - attack7.png" type="Texture" id=44]
[ext_resource path="res://Character/Attack/Hobbit - attack11.png" type="Texture" id=45]
[ext_resource path="res://Character/Attack/Hobbit - attack12.png" type="Texture" id=46]
[ext_resource path="res://Character/Attack/Hobbit - attack14.png" type="Texture" id=47]
[ext_resource path="res://Character/Attack/Hobbit - attack16.png" type="Texture" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 32 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 41 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 37 ), ExtResource( 47 ), ExtResource( 36 ), ExtResource( 48 ), ExtResource( 39 ) ],
"loop": true,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "Climb",
"speed": 4.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "ClimbStoped",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "Fall",
"speed": 20.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8.5 )

[node name="Fredegar" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 5 )
moveData = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.5 )
shape = SubResource( 2 )

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 0, 12 )
collide_with_areas = true
collide_with_bodies = false

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Dust" parent="." instance=ExtResource( 26 )]
position = Vector2( -10, -7 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -7 )

[node name="HeldStonePosition" type="Position2D" parent="."]
position = Vector2( 10, -7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_CoyoteJumpTimer_timeout"]
